sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__index-for-max-materialized-cte-no-where-bytecode.snap
---
source: indexes.sqltest
expression: |-
  WITH prices(price) AS MATERIALIZED (
          SELECT price FROM products
      )
      SELECT MAX(price) FROM prices;
info:
  statement_type: WITH (CTE)
  tables:
  - prices
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--MATERIALIZE prices
|  `--SCAN products USING COVERING INDEX idx_products_price
`--SCAN prices

BYTECODE
addr  opcode          p1  p2  p3  p4           p5  comment
   0  Init             0  22   0                0  Start at 22
   1  Once            11   0   0                0  goto 11
   2  OpenEphemeral    0   1   0                0  cursor=0 is_table=true
   3  OpenRead         1   5   0  k(2,B)        0  index=idx_products_price, root=5, iDb=0
   4  Rewind           1  11   0                0  Rewind index idx_products_price
   5    Column         1   0   2                0  r[2]=idx_products_price.price
   6    RealAffinity   2   0   0                0
   7    MakeRecord     2   1   3                0  r[3]=mkrec(r[2..2]); for
   8    NewRowid       0   4   0                0  r[4]=rowid
   9    Insert         0   3   4                4  intkey=r[4] data=r[3]
  10  Next             1   5   0                1
  11  Null             0   6   0                0  r[6]=NULL
  12  Last             0  18   0                0
  13    Column         0   0   1                0  r[1]=ephemeral().price
  14    Copy           1   7   0                0  r[7]=r[1]
  15    AggStep        0   7   6  max(Binary)   0  accum=r[6] step(r[7])
  16    Goto           0  18   0                0
  17  Prev             0  13   0                0
  18  AggFinal         0   6   0  max           0  accum=r[6]
  19  Copy             6   5   0                0  r[5]=r[6]
  20  ResultRow        5   1   0                0  output=r[5]
  21  Halt             0   0   0                0
  22  Transaction      0   1  14                0  iDb=0 tx_mode=Read
  23  Goto             0   1   0                0
