sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__index-for-max-materialized-cte-no-where.snap
---
source: indexes.sqltest
expression: |-
  WITH prices(price) AS MATERIALIZED (
          SELECT price FROM products
      )
      SELECT MAX(price) FROM prices;
info:
  statement_type: WITH (CTE)
  tables:
  - prices
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--MATERIALIZE prices
|  `--SCAN products USING COVERING INDEX idx_products_price
`--SCAN prices
