sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__index-for-min-bytecode.snap
---
source: indexes.sqltest
expression: SELECT MIN(price) FROM products;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products USING COVERING INDEX idx_products_price

BYTECODE
addr  opcode          p1  p2  p3  p4           p5  comment
   0  Init             0  14   0                0  Start at 14
   1  Null             0   2   0                0  r[2]=NULL
   2  OpenRead         0   5   0  k(2,B)        0  index=idx_products_price, root=5, iDb=0
   3  Rewind           0  10   0                0  Rewind index idx_products_price
   4    Column         0   0   3                0  r[3]=idx_products_price.price
   5    RealAffinity   3   0   0                0
   6    IsNull         3   9   0                0  if (r[3]==NULL) goto 9
   7    AggStep        0   3   2  min(Binary)   0  accum=r[2] step(r[3])
   8    Goto           0  10   0                0
   9  Next             0   4   0                1
  10  AggFinal         0   2   0  min           0  accum=r[2]
  11  Copy             2   1   0                0  r[1]=r[2]
  12  ResultRow        1   1   0                0  output=r[1]
  13  Halt             0   0   0                0
  14  Transaction      0   1  14                0  iDb=0 tx_mode=Read
  15  Goto             0   1   0                0
