sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__index-for-min.snap
---
source: indexes.sqltest
expression: SELECT MIN(price) FROM products;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products USING COVERING INDEX idx_products_price
