sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__index-for-order-by.snap
---
source: indexes.sqltest
expression: SELECT id, sku, price FROM products ORDER BY price LIMIT 10;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products USING INDEX idx_products_price
