sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__index-not-equal.snap
---
source: indexes.sqltest
expression: SELECT id, sku, name FROM products WHERE category != 'Discontinued';
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products
