sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__indexed-by-delete-sku.snap
---
source: indexes.sqltest
expression: DELETE FROM products INDEXED BY idx_products_sku WHERE sku = 'OLD';
info:
  statement_type: DELETE
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SEARCH products USING COVERING INDEX idx_products_sku (sku=?)
