sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__indexed-by-join-both.snap
---
source: indexes.sqltest
expression: |-
  SELECT p.name, o.order_date
      FROM products p INDEXED BY idx_products_sku
      JOIN orders o INDEXED BY idx_orders_customer_date
      ON p.id = o.customer_id
      WHERE p.sku = 'X' AND o.customer_id = 42;
info:
  statement_type: SELECT
  tables:
  - orders
  - p.id
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
|--SEARCH p USING INDEX idx_products_sku (sku=?)
`--SEARCH o USING COVERING INDEX idx_orders_customer_date (customer_id=?)
