sqlite/conformance/sqlite-sqltests/snapshot_tests/indexes/snapshots/indexes__indexed-by-no-where-clause.snap
---
source: indexes.sqltest
expression: SELECT id, name, price FROM products INDEXED BY idx_products_sku;
info:
  statement_type: SELECT
  tables:
  - products
  setup_blocks:
  - schema
  database: ':memory:'
---
QUERY PLAN
`--SCAN products USING INDEX idx_products_sku
